@@ -1,24 +1,31 @@
 package com.skilllink.backend.service;
 
-import com.skilllink.backend.dto.perfilHabilidad.ActualziarPerfilHabilidad;
+import com.skilllink.backend.dto.perfilHabilidad.ActualziarHabilidad;
+import com.skilllink.backend.dto.perfilHabilidad.HabilidadesPerfil;
 import com.skilllink.backend.dto.perfilHabilidad.HabilidadesSeleccionadas;
 import com.skilllink.backend.entity.Habilidad;
 import com.skilllink.backend.entity.Perfil;
 import com.skilllink.backend.entity.PerfilHabilidad;
 import com.skilllink.backend.entity.Usuario;
+import com.skilllink.backend.enums.NivelHabilidad;
+import com.skilllink.backend.mapper.PerfilHabilidadMapper;
 import com.skilllink.backend.repository.HabilidadRepositorio;
 import com.skilllink.backend.repository.PerfilHabilidadRepositorio;
 import com.skilllink.backend.repository.PerfilRepositorio;
 import jakarta.persistence.EntityNotFoundException;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.Banner;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.toList;
+
 @Service
-public class ServicioDePerfilHabilidad {
+public class PerfilHabilidadService {
 
 
     @Autowired
@@ -27,20 +34,17 @@ public class ServicioDePerfilHabilidad {
     PerfilHabilidadRepositorio perfilHabilidadRepositorio;
     @Autowired
     HabilidadRepositorio habilidadRepositorio;
+    @Autowired
+    PerfilHabilidadMapper perfilHabilidadMapper;
 
 
-    public PerfilHabilidad actualizarUsuario (ActualziarPerfilHabilidad dto, Usuario usuario){
-
-        PerfilHabilidad perfilHabilidad = perfilHabilidadRepositorio.findByPerfilUsuarioAndHabilidadIdHabilidad(usuario, dto.idHabilidad()).orElseThrow(
+    public PerfilHabilidad actualizarUsuario (ActualziarHabilidad dto, Usuario usuario){
+        PerfilHabilidad perfilHabilidad = perfilHabilidadRepositorio
+                .findByPerfilUsuarioAndHabilidadIdHabilidad(usuario, dto.idHabilidad()).orElseThrow(
                 () -> new EntityNotFoundException("No se encontro habilidad con id: " + dto.idHabilidad() + " relacionada al usuario")
         );
 
-        if (dto.nivel() != null && !dto.nivel().isBlank()){
-            perfilHabilidad.setNivel(dto.nivel());
-        }
-        if (dto.anosDeExperiencia() != null){
-            perfilHabilidad.setAnosExperiencia(dto.anosDeExperiencia());
-        }
+        perfilHabilidadMapper.updateEntityFromDto(dto,perfilHabilidad);
 
         return perfilHabilidadRepositorio.save(perfilHabilidad);
     }
@@ -59,38 +63,26 @@ public class ServicioDePerfilHabilidad {
 
     }
 
-    public List<HabilidadesSeleccionadas> agregarHabilidad(List<HabilidadesSeleccionadas> habilidadesSeleccionadas,
+    public List<HabilidadesSeleccionadas> agregarHabilidad(List<HabilidadesSeleccionadas> habilidades,
                                                            Usuario usuario) {
         Perfil perfil = perfilRepositorio.findByUsuario(usuario);
-
         List<Long> idHabilidadesExistentes = perfilHabilidadRepositorio.findIdHabilidadByPerfilId(perfil.getIdPerfil());
+        List<PerfilHabilidad> nuevosPh = habilidades.stream().map(dto -> {
 
-        List<PerfilHabilidad> nuevasAsociaciones = new ArrayList<>();
-
-        for (HabilidadesSeleccionadas dto : habilidadesSeleccionadas) {
-            if (idHabilidadesExistentes.contains(dto.idHabildad())) {
-                throw new IllegalStateException("La habilidad con ID " + dto.idHabildad() + " ya está asociada a este perfil.");
+            if (idHabilidadesExistentes.contains(dto.idHabildad())){
+                throw new IllegalStateException("Habilidad con id " + dto.idHabildad() + " ya existe en el perfil");
             }
-
             Habilidad habilidad = habilidadRepositorio.findById(dto.idHabildad())
-                    .orElseThrow(() -> new EntityNotFoundException("Habilidad no encontrada con ID: " + dto.idHabildad()));
+                    .orElseThrow(() -> new EntityNotFoundException("Habilidad no encontrada con id" + dto.idHabildad()));
 
-            PerfilHabilidad nuevaAsociacion = new PerfilHabilidad();
+            PerfilHabilidad nuevoPh = perfilHabilidadMapper.toEntity(dto, habilidad, perfil);
 
-            nuevaAsociacion.setPerfil(perfil);
-            nuevaAsociacion.setHabilidad(habilidad);
-            nuevaAsociacion.setNivel(dto.nivel());
-            nuevaAsociacion.setAnosExperiencia(dto.anosDeExperiencia());
-            nuevasAsociaciones.add(nuevaAsociacion);
-        }
-        List<PerfilHabilidad> asociacionesGuardadas = perfilHabilidadRepositorio.saveAll(nuevasAsociaciones);
+            return nuevoPh;
+        }).toList();
 
-        return asociacionesGuardadas.stream()
-                .map(ph -> new HabilidadesSeleccionadas(
-                        ph.getHabilidad().getIdHabilidad(),
-                        ph.getNivel(),
-                        ph.getAnosExperiencia()))
-                .collect(Collectors.toList());
+        List<PerfilHabilidad> habilidadList = perfilHabilidadRepositorio.saveAll(nuevosPh);
+
+        return habilidadList.stream().map(perfilHabilidadMapper::toDto).toList();
 
     }
 }
